Add support for the Java SE web app to select jar files to deploy

--- a/package.json
+++ b/package.json
@@ -550,7 +550,7 @@
                 },
                 {
                     "command": "appService.Deploy",
-                    "when": "explorerResourceIsFolder == false && resourceExtname == .war",
+                    "when": "explorerResourceIsFolder == false && resourceExtname =~ /.[j|w]ar$/",
                     "group": "zzz_@appServiceDeployCommands"
                 }
             ],
